--- a/app/src/main/res/layout/fragment_add_newavablilty.xml
+++ b/app/src/main/res/layout/fragment_add_newavablilty.xml
@@ -74,173 +74,13 @@
 
     </RelativeLayout>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_below="@+id/toolbar"
-            android:id="@+id/cardforallweek"
-            app:cardElevation="30dp"
-            android:layout_height="wrap_content">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:id="@+id/radioline"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp">
-
-            <CheckBox
-                android:id="@+id/radiotn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerInParent="true"
-                />
+            android:layout_height="match_parent"
+            android:id="@+id/daysadapter"/>
 
 
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_toEndOf="@+id/radiotn"
-                android:text="All Week"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/multiplyfeildslayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/radioline"
-            android:layout_marginBottom="10dp"
-            android:orientation="vertical">
-
-
-        </LinearLayout>
-
-
-
-        <Button
-            android:id="@+id/addnorebtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/multiplyfeildslayout"
-            android:background="@drawable/bordersforaddavabillity"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="15dp"
-            android:text="Add more" />
-
-
-    </RelativeLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_below="@+id/cardforallweek"
-            android:id="@+id/card"
-            app:cardElevation="30dp"
-            android:layout_height="wrap_content">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_height="wrap_content">
-
-                <RelativeLayout
-                    android:id="@+id/radiolinefromonday"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp">
-
-                    <CheckBox
-                        android:id="@+id/radiotnformonday"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerInParent="true" />
-
-
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_toEndOf="@+id/radiotnformonday"
-                        android:text="Monday"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:id="@+id/alldayline"
-                    android:layout_below="@+id/radiolinefromonday"
-                    android:layout_height="wrap_content">
-
-                    <CheckBox
-                        android:id="@+id/radioforallday"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-
-                        android:layout_alignParentStart="true"
-                        android:layout_centerInParent="true" />
-
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_toEndOf="@+id/radioforallday"
-
-                        android:text="All Day"
-                        android:textColor="@color/color_gray"
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
-
-                </RelativeLayout>
-
-
-                <LinearLayout
-                    android:id="@+id/layoutmonday"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/alldayline"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="vertical">
-
-
-                </LinearLayout>
-
-
-
-                <Button
-                    android:id="@+id/addnorebtnformonday"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/layoutmonday"
-                    android:background="@drawable/bordersforaddavabillity"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="15dp"
-                    android:text="Add more" />
-
-
-            </RelativeLayout>
-        </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
 
