--- a/app/src/main/res/layout/addrowfromto.xml
+++ b/app/src/main/res/layout/addrowfromto.xml
@@ -2,86 +2,114 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal"
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:id="@+id/card"
+        app:cardElevation="30dp"
         android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_marginEnd="15dp"
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_height="wrap_content">
 
-
-            <TextView
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:id="@+id/radiolinefromonday"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textSize="15sp"
-                android:layout_marginEnd="1dp"
-                android:textColor="@color/black"
-                android:textStyle="bold"
+                android:layout_marginBottom="5dp">
 
-                android:text="From:"/>
-
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="29dp"
-                android:textAlignment="center"
-                android:id="@+id/fromTimeInput"
-                android:background="@drawable/borders"
-                android:padding="2dp"
-                android:drawableEnd="@drawable/baseline_lock_clock_24"
-            />
+                <CheckBox
+                    android:id="@+id/radiotnformonday"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerInParent="true" />
 
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-        android:layout_marginEnd="15dp"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:layout_marginEnd="1dp"
-                android:layout_gravity="center"
-                android:textStyle="bold"
-                android:textSize="15sp"
-                android:text="To:"/>
 
-            <TextView
-                android:layout_width="80dp"
-                android:layout_marginEnd="10dp"
-                android:layout_height="29dp"
-                android:textAlignment="center"
-                android:background="@drawable/borders"
-                android:padding="2dp"
-                android:id="@+id/toTimeInput"
-                android:drawableEnd="@drawable/baseline_lock_clock_24"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_toEndOf="@+id/radiotnformonday"
+                    android:text="Monday"
+                    android:id="@+id/dayname"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
 
-          />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:id="@+id/alldayline"
+                android:layout_below="@+id/radiolinefromonday"
+                android:layout_height="wrap_content">
+
+                <CheckBox
+                    android:id="@+id/radioforallday"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_alignParentStart="true"
+                    android:layout_centerInParent="true" />
 
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_toEndOf="@+id/radioforallday"
+
+                    android:text="All Day"
+                    android:textColor="@color/color_gray"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:gravity="center_vertical"
+                android:id="@+id/recyclerViewkk"
+                android:layout_below="@+id/alldayline"
+                android:layout_marginTop="3dp"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+
+
+            </androidx.recyclerview.widget.RecyclerView>
+
             <Button
-                android:layout_width="80dp"
-                android:text="Save"
-                android:textColor="@color/white"
-                android:id="@+id/saveButton"
-                android:padding="1dp"
-                android:background="@color/color_dark_blue"
-                android:layout_height="29dp"/>
-        </LinearLayout>
+                android:id="@+id/addnorebtnformonday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/recyclerViewkk"
+                android:background="@drawable/bordersforaddavabillity"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="15dp"
+                android:text="Add more" />
 
-    </LinearLayout>
+
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
+
+
 
 
 
