--- a/app/src/main/res/layout/fragment_home_fragment.xml
+++ b/app/src/main/res/layout/fragment_home_fragment.xml
@@ -1,131 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.Navigation_Fragment">
-    <RelativeLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layut_1"
         android:layout_width="match_parent"
-        android:layout_alignParentTop="true"
-        android:id="@+id/topline"
+        android:layout_height="wrap_content"
         android:background="@color/color_dark_blue"
-        android:layout_height="wrap_content">
-
-        <!--        TopView-->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
-            android:id="@+id/TopView"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
-                android:text="Home"
-                android:textColor="@color/white"
-                android:textSize="30sp"
-                android:textStyle="bold" />
+        android:padding="10dp"
+        app:layout_constraintTop_toTopOf="parent">
 
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@drawable/male"
-                android:layout_alignParentEnd="true"
-                android:id="@+id/User_image"
-                android:layout_marginStart="10dp"
-                android:text="Live Jobs"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="30sp"/>
-
-
-        </RelativeLayout>
-        <!-- ______-->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/TopView"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_marginBottom="20dp"
-                android:layout_height="wrap_content">
-                <Button
-                    android:layout_width="140dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/button_shape_three"
-                    android:layout_marginRight="10dp"
-                    android:text="Available Jobs"
-                    android:textStyle="bold"
-                    android:id="@+id/Available_Jobs"
-                    android:textAllCaps="false"
-                    android:layout_marginLeft="10dp"
-                    />
-
-                <Button
-                    android:layout_width="140dp"
-                    android:layout_height="35dp"
-                    android:id="@+id/Previous_Jobs"
-                    android:text="My Jobs"
-                    android:textAllCaps="false"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:background="@drawable/button_shape_tow"
-                    />
-            </LinearLayout>
-
-
-        </RelativeLayout>
-
-
-
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_below="@+id/topline"
-        android:id="@+id/searchline"
-        android:layout_margin="10dp"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_weight="7"
-            android:hint="Search job.."
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:layout_marginEnd="5dp"
-            android:inputType="text"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/four_side_border_curve_new_color"
-            android:layout_height="50dp"/>
+        <TextView
+            android:id="@+id/my_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="16dp"
+            android:text="Home"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:id="@+id/UserImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/male"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.947"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.168" />
+
+        <Button
+            android:id="@+id/Available_Jobs"
+            android:layout_width="140dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="36dp"
+            android:background="@drawable/buttonavaldesign"
+            android:text="AVAILABLE"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/my_text_view" />
+
+        <Button
+            android:id="@+id/Previous_Jobs"
+            android:layout_width="140dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="34dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/button_shape_tow"
+            android:text="Previous Jobs"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/Available_Jobs"
+            app:layout_constraintTop_toBottomOf="@+id/my_text_view"
+            app:layout_constraintVertical_bias="1.0" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/line2"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layut_1">
+
+
+        <EditText
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/four_side_border_curve_new_color"
+            android:padding="15dp"
+            android:id="@+id/search"
+            android:layout_marginStart="20dp"
+            android:hint="Search"
+            app:layout_constraintEnd_toStartOf="@+id/filter"
+            app:layout_constraintHorizontal_bias="0.566"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:layout_editor_absoluteY="20dp" />
+
+        <ImageView
             android:id="@+id/filter"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:layout_marginEnd="28dp"
+            app:layout_constraintStart_toEndOf="@+id/search"
             android:background="@drawable/filter"
-            android:layout_height="match_parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:layout_editor_absoluteY="25dp" />
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:id="@+id/searchrecycle"
-        android:layout_below="@+id/searchline"
+        android:layout_width="455dp"
+        android:layout_height="578dp"
+        app:layout_constraintTop_toTopOf="line2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="249dp" />
 
-        android:layout_height="match_parent"/>
 
-
-
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
