--- a/app/src/main/res/layout/fragment_home_fragment.xml
+++ b/app/src/main/res/layout/fragment_home_fragment.xml
@@ -112,7 +112,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="455dp"
         android:layout_height="578dp"
-        app:layout_constraintTop_toTopOf="line2"
+        app:layout_constraintTop_toBottomOf="@id/line2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
